# coreimage-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_image.rs  03_filter.rs  04_context.rs  05_detector.rs  06_color.rs  07_vector.rs  08_kernel.rs  09_barcode_descriptor.rs  10_image_processor.rs  11_feature.rs  12_filter_generator.rs  13_sampler.rs  14_accumulator.rs  15_render_destination.rs  16_raw_filter.rs
src/: barcode_descriptor.rs  color.rs  constants.rs  context.rs  detector.rs  error.rs  feature.rs  ffi.rs  filter.rs  filter_constructor.rs  filter_generator.rs  filter_shape.rs  filters.rs  image.rs  image_accumulator.rs  image_processor.rs  kernel.rs  lib.rs  plugin.rs  raw_filter.rs  render_destination.rs  sampler.rs  util.rs  value.rs  vector.rs
src/ffi/: barcode_descriptor.rs  color.rs  common.rs  constants.rs  context.rs  detector.rs  feature.rs  filter.rs  filter_constructor.rs  filter_generator.rs  filter_shape.rs  image.rs  image_accumulator.rs  image_processor.rs  kernel.rs  mod.rs  plugin.rs  raw_filter.rs  render_destination.rs  sampler.rs  vector.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreImageBridge/: BarcodeDescriptor.swift  Color.swift  Constants.swift  Context.swift  Core.swift  Detector.swift  Feature.swift  Filter.swift  FilterConstructor.swift  (+11 more)
tests/: barcode_descriptor.rs  color.rs  constants.rs  context.rs  detector.rs  feature.rs  filter.rs  filter_builtins.rs  filter_constructor.rs  filter_generator.rs  filter_shape.rs  image.rs  image_accumulator.rs  image_processor.rs  kernel.rs  plugin.rs  raw_filter.rs  render_destination.rs  sampler.rs  vector.rs
tests/common/: mod.rs
(+1 files in other folders)
