[package]
name = "coreimage"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/coreimage-rs"
repository = "https://github.com/doom-fish/coreimage-rs"
description = "Safe Rust bindings for Apple's CoreImage framework — GPU-accelerated image processing on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["coreimage", "image-processing", "macos", "apple", "gpu"]
categories = ["api-bindings", "graphics", "multimedia::images", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "coreimage"
crate-type = ["lib"]

[features]
default = ["filters"]
filters = []
metal = ["dep:apple-metal"]

[dependencies]
apple-cf = { version = ">=0.7, <0.10", default-features = false, features = ["cv", "cg", "iosurface"] }
apple-metal = { version = ">=0.5, <0.9", optional = true }
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"
required-features = ["filters"]

[profile.release]
debug = "full"
strip = "none"
